@@ -30,46 +30,52 @@ namespace PoDoFo {
 #define STREAM_SIZE_INCREASE 1024
 
 PdfStream::PdfStream( PdfObject* pParent )
-    :m_pParent( pParent ) 
+    :m_pParent( pParent ), m_pData( NULL )
 {
+/*
     m_szStream = NULL;
     m_lLength  = 0;
     m_lSize    = 0;
     m_bOwnedBuffer = true;
+*/
 }
 
 PdfStream::PdfStream( const PdfStream & rhs )
+    :m_pParent( NULL ) , m_pData( NULL )
 {
+/*
     m_szStream = NULL;
     m_lLength  = 0;
     m_lSize    = 0;
     m_bOwnedBuffer = true;
-
+*/
     operator=(rhs);
 }
 
 PdfStream::~PdfStream()
 {
-    if( m_szStream && m_lLength && m_bOwnedBuffer )
-        free( m_szStream );
+    if( m_pData && !--m_pData->m_lRefCount )
+        delete m_pData;
 }
 
 void PdfStream::Set( char* szBuffer, long lLen, bool takePossession )
 {
-    if( m_szStream && m_lLength && m_bOwnedBuffer )
-        free( m_szStream );
+    if( m_pData && !--m_pData->m_lRefCount )
+        delete m_pData;
 
     if( !szBuffer )
     {
         RAISE_ERROR( ePdfError_InvalidHandle );
     }
 
-    m_szStream = szBuffer;
-    m_lLength  = lLen;
-    m_lSize    = lLen;
+    m_pData                 = new PdfStreamPrivate();
+    m_pData->m_szStream     = szBuffer;
+    m_pData->m_lLength      = lLen;
+    m_pData->m_lSize        = lLen;
+    m_pData->m_bOwnedBuffer = takePossession;
 
     if( m_pParent )
-        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_lLength ) );
+        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_pData->m_lLength ) );
 
 }
 
@@ -80,14 +86,10 @@ void PdfStream::Set( const char* pszString )
         RAISE_ERROR( ePdfError_InvalidHandle );
     }
 
-    if( m_szStream && m_lLength )
+    if( m_pData && !--m_pData->m_lRefCount )
     {
-        if ( m_bOwnedBuffer )
-            free( m_szStream );
-        
-        m_szStream = NULL;
-        m_lLength  = 0;
-        m_lSize    = 0;
+        delete m_pData;
+        m_pData = NULL;
     }
 
     Append( pszString );
@@ -113,51 +115,54 @@ void PdfStream::Append( const char* pszString, long lLen )
         RAISE_ERROR( ePdfError_InvalidHandle );
     }
 
-    if( m_lSize < m_lLength + lLen )
+    // Detach from implicitly shared data
+    Detach();
+
+    if( m_pData->m_lSize < m_pData->m_lLength + lLen )
     {
         // TODO: increase the size as in a vector
-        lSize = (((m_lLength + lLen) / STREAM_SIZE_INCREASE) + 1) * STREAM_SIZE_INCREASE;
+        lSize = (((m_pData->m_lLength + lLen) / STREAM_SIZE_INCREASE) + 1) * STREAM_SIZE_INCREASE;
         pBuf = (char*)malloc( sizeof( char ) * lSize );
         if( !pBuf )
         {
             RAISE_ERROR( ePdfError_OutOfMemory );
         }
 
-        memcpy( pBuf, m_szStream, m_lLength );
-        memcpy( pBuf+m_lLength, pszString, lLen );
+        memcpy( pBuf, m_pData->m_szStream, m_pData->m_lLength );
+        memcpy( pBuf+m_pData->m_lLength, pszString, lLen );
         
-        free( m_szStream );
-        m_szStream = pBuf;
+        free( m_pData->m_szStream );
+        m_pData->m_szStream = pBuf;
 
-        m_lLength += lLen;
-        m_lSize    = lSize;
+        m_pData->m_lLength += lLen;
+        m_pData->m_lSize    = lSize;
     }
     else
     {
-        memcpy( m_szStream+m_lLength, pszString, lLen );
-        m_lLength += lLen;
+        memcpy( m_pData->m_szStream+m_pData->m_lLength, pszString, lLen );
+        m_pData->m_lLength += lLen;
     }
 
     if( m_pParent )
-        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_lLength ) );
+        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_pData->m_lLength ) );
 }
 
 void PdfStream::GetCopy( char** pBuffer, long* lLen ) const
 {
-    if( !pBuffer || !lLen )
+    if( !m_pData || !pBuffer || !lLen )
     {
         RAISE_ERROR( ePdfError_InvalidHandle );
     }
 
-    *pBuffer = (char*)malloc( sizeof( char ) * m_lLength );
-    *lLen = m_lLength;
+    *pBuffer = (char*)malloc( sizeof( char ) * m_pData->m_lLength );
+    *lLen = m_pData->m_lLength;
     
     if( !*pBuffer )
     {
         RAISE_ERROR( ePdfError_OutOfMemory );
     }
     
-    memcpy( *pBuffer, m_szStream, m_lLength );
+    memcpy( *pBuffer, m_pData->m_szStream, m_pData->m_lLength );
 }
 
 void PdfStream::GetFilteredCopy( char** ppBuffer, long* lLen ) const
@@ -169,13 +174,22 @@ void PdfStream::GetFilteredCopy( char** ppBuffer, long* lLen ) const
     TVecDictionaries       tDecodeParams;
     TCIVecDictionaries     itDecodeParams;
 
-    char*           pInBuf = m_szStream;
-    long            lInLen = m_lLength;
+    char*           pInBuf;
+    long            lInLen;
 
     if( !ppBuffer || !lLen )
     {
         RAISE_ERROR( ePdfError_InvalidHandle );
     }
+
+    *ppBuffer = NULL;
+    *lLen     = 0;
+
+    if( !m_pData ) 
+        return;
+
+    pInBuf = m_pData->m_szStream;
+    lInLen = m_pData->m_lLength;
 
     FillFilterList( vecFilters );
     GetDecodeParms( &tDecodeParams );
@@ -208,7 +222,7 @@ void PdfStream::GetFilteredCopy( char** ppBuffer, long* lLen ) const
             } catch( PdfError & e ) {
                 e.AddToCallstack( __FILE__, __LINE__ );
 
-                if( pInBuf != m_szStream ) 
+                if( pInBuf != m_pData->m_szStream ) 
                 {
                     // the input buffer was malloc'ed by another filter before
                     // so free it and let it point to the output buffer
@@ -221,7 +235,7 @@ void PdfStream::GetFilteredCopy( char** ppBuffer, long* lLen ) const
                 throw e;
             }
   
-            if( pInBuf != m_szStream ) 
+            if( pInBuf != m_pData->m_szStream ) 
             {
                 // the input buffer was malloc'ed by another filter before
                 // so free it and let it point to the output buffer
@@ -238,15 +252,15 @@ void PdfStream::GetFilteredCopy( char** ppBuffer, long* lLen ) const
     }
     else
     {
-        *ppBuffer = (char*)malloc( sizeof( char ) * m_lLength );
-        *lLen = m_lLength;
+        *ppBuffer = (char*)malloc( sizeof( char ) * m_pData->m_lLength );
+        *lLen = m_pData->m_lLength;
 
         if( !*ppBuffer )
         {
             RAISE_ERROR( ePdfError_OutOfMemory );
         }
                 
-        memcpy( *ppBuffer, m_szStream, m_lLength );
+        memcpy( *ppBuffer, m_pData->m_szStream, m_pData->m_lLength );
     }
 
     FreeDecodeParms( &tDecodeParams );
@@ -262,7 +276,7 @@ void PdfStream::FlateDecode()
 
     PdfArray::const_iterator tciFilters;
     
-    if( !m_szStream )
+    if( !m_pData || !m_pData->m_szStream )
         return; // ePdfError_ErrOk
 
     if( m_pParent->GetDictionary().HasKey( "Filter" ) )
@@ -373,18 +387,23 @@ void PdfStream::FlateDecodeStreamData()
     char*            pBuffer;
     long             lLen;
 
+    if( !m_pData ) 
+        return;
+
+    Detach();
+
     pFilter = PdfFilterFactory::Create( ePdfFilter_FlateDecode );
     if( pFilter ) 
     {
-        pFilter->Encode( m_szStream, m_lLength, &pBuffer, &lLen );
-        free( m_szStream );
+        pFilter->Encode( m_pData->m_szStream, m_pData->m_lLength, &pBuffer, &lLen );
+        free( m_pData->m_szStream );
 
-        m_szStream  = pBuffer;
-        m_lSize     = lLen;
-        m_lLength   = lLen;
+        m_pData->m_szStream  = pBuffer;
+        m_pData->m_lSize     = lLen;
+        m_pData->m_lLength   = lLen;
 
         if( m_pParent )
-            m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_lLength ) );
+            m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_pData->m_lLength ) );
     }
     else
     {
@@ -470,19 +489,15 @@ EPdfFilter PdfStream::FilterNameToType( const PdfName & name )
 const PdfStream & PdfStream::operator=( const PdfStream & rhs )
 {
     // Clear any existing old data
-    if( m_szStream && m_lLength )
-        free( m_szStream );
+    if( m_pData && !--m_pData->m_lRefCount )
+        delete m_pData;
 
-    m_pParent  = rhs.m_pParent;
-    m_lSize    = rhs.m_lLength;
-    m_lLength  = rhs.m_lLength;
-    m_bOwnedBuffer = true;	// since we're making a copy
+    m_pData = rhs.m_pData;
+
+    if( m_pParent ) 
+        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)(m_pData ? m_pData->m_lLength : 0 ) ) );
     
-    m_szStream = (char*)malloc( sizeof(char) * m_lLength );
-    memcpy( m_szStream, rhs.m_szStream, m_lLength );
-
-    if( m_pParent )
-        m_pParent->GetDictionary().AddKey( PdfName::KeyLength, PdfVariant( (long)m_lLength ) );
+    printf("Copying a stream\n");
 
     return *this;
 }
@@ -588,5 +603,30 @@ void PdfStream::SetDecodeParms( TVecDictionaries* pParams )
             m_pParent->GetDictionary().AddKey( "DecodeParms", *((*pParams)[0] ) );
     }
 }
+
+void PdfStream::Detach() 
+{
+    if( m_pData && m_pData->m_lRefCount )
+    {
+        PdfStreamPrivate* p = new PdfStreamPrivate();
+        p->m_lLength        = m_pData->m_lLength;
+        p->m_lSize          = p->m_lLength;
+        p->m_bOwnedBuffer    = true;
+        p->m_szStream = (char*)malloc( p->m_lLength * sizeof(char) );
+
+        if( !p->m_szStream ) 
+        {
+            RAISE_ERROR( ePdfError_OutOfMemory );
+        }
+        
+        memcpy( p->m_szStream, m_pData->m_szStream, m_pData->m_lLength );
+
+        m_pData->m_lRefCount--;
+        m_pData = p;
+    }
+
+    if( !m_pData )
+        m_pData = new PdfStreamPrivate();
+}    
 
 };
